old tests passed

--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -24,7 +24,6 @@ Exposed-modules:    Data.Packed.Internal,
                     Data.Packed.Internal.Matrix, Data.Packed.Matrix,
                     Data.Packed.Internal.Tensor, Data.Packed.Tensor,
                     Data.Packed.Plot
-                    Data.Packed.Instances
                     LAPACK,
                     GSL.Vector, 
                     GSL.Matrix
@@ -34,6 +33,7 @@ Exposed-modules:    Data.Packed.Internal,
                     GSL.Polynomials,
                     GSL.Minimization,
                     LinearAlgebra, LinearAlgebra.Algorithms,
+                    GSL.Compat,
                     GSL, HSSL
 Other-modules:
 C-sources:          lib/Data/Packed/Internal/aux.c,
