GSL.Special.Exp.hs

--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -30,7 +30,7 @@ Exposed-modules:    Data.Packed.Internal,
                     GSL.Differentiation, GSL.Integration,
                     GSL.Special, GSL.Special.Internal,
                     GSL.Special.Gamma, GSL.Special.Erf,
-                    GSL.Special.Airy,
+                    GSL.Special.Airy, GSL.Special.Exp,
                     GSL.Fourier,
                     GSL.Polynomials,
                     GSL.Minimization,
