GSL.Special.Bessel.hs

--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -31,6 +31,7 @@ Exposed-modules:    Data.Packed.Internal,
                     GSL.Special, GSL.Special.Internal,
                     GSL.Special.Gamma, GSL.Special.Erf,
                     GSL.Special.Airy, GSL.Special.Exp,
+                    GSL.Special.Bessel,
                     GSL.Fourier,
                     GSL.Polynomials,
                     GSL.Minimization,
