more automatic wrappers for simple special functions

--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -31,7 +31,17 @@ Exposed-modules:    Data.Packed.Internal,
                     GSL.Special, GSL.Special.Internal,
                     GSL.Special.Gamma, GSL.Special.Erf,
                     GSL.Special.Airy, GSL.Special.Exp,
-                    GSL.Special.Bessel,
+                    GSL.Special.Bessel, GSL.Special.Clausen,
+                    GSL.Special.Coulomb, GSL.Special.Coupling,
+                    GSL.Special.Dawson, GSL.Special.Debye,
+                    GSL.Special.Dilog, GSL.Special.Elementary,
+                    GSL.Special.Ellint,
+                    GSL.Special.Expint, GSL.Special.Fermi_dirac,
+                    GSL.Special.Gegenbauer, GSL.Special.Hyperg,
+                    GSL.Special.Laguerre, GSL.Special.Lambert,
+                    GSL.Special.Pow_int, GSL.Special.Psi,
+                    GSL.Special.Synchrotron, GSL.Special.Trig,
+                    GSL.Special.Zeta, GSL.Special.Log,
                     GSL.Fourier,
                     GSL.Polynomials,
                     GSL.Minimization,
