links to documentation for special functions

--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -42,6 +42,7 @@ Exposed-modules:    Data.Packed.Internal,
                     GSL.Special.Pow_int, GSL.Special.Psi,
                     GSL.Special.Synchrotron, GSL.Special.Trig,
                     GSL.Special.Zeta, GSL.Special.Log,
+                    GSL.Special.Legendre,
                     GSL.Fourier,
                     GSL.Polynomials,
                     GSL.Minimization,
