--- a/HSSL.cabal
+++ b/HSSL.cabal
@@ -1,4 +1,4 @@
-Name:               HSSL2
+Name:               HSSL
 Version:            0.1
 License:            GPL
 --License-file:       LICENSE
