package renamed to hmatrix

--- a/hssl.cabal
+++ b/hssl.cabal
@@ -1,4 +1,4 @@
-Name:               hssl
+Name:               hmatrix
 Version:            0.1.0.0
 License:            GPL
 License-file:       LICENSE
