--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -13,7 +13,7 @@ Description:        A purely functional interface to basic linear algebra comput
                     .
                     More information: <http://alberrto.googlepages.com/gslhaskell>
 Category:           Numerical, Math
-tested-with:        GHC ==6.6.1, GHC ==6.8.1
+tested-with:        GHC ==6.6.1, GHC ==6.8.1, GHC ==6.8.2
 
 cabal-version:      >=1.2
 
@@ -31,7 +31,10 @@ library
     if os(windows)
       ghc-options:      -fasm
     else
-      ghc-options:      -fvia-C
+      if arch(x86_64)
+         ghc-options:   -fasm
+      else
+         ghc-options:   -fvia-C
 
     Build-Depends:      haskell98
     Extensions:         ForeignFunctionInterface
