--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -86,12 +86,14 @@ library
                         Numeric.LinearAlgebra.Interface,
                         Numeric.LinearAlgebra.Algorithms,
                         Graphics.Plot,
-                        Numeric.LinearAlgebra.Testing
+                        Numeric.LinearAlgebra.Tests
     other-modules:      Data.Packed.Internal,
                         Data.Packed.Internal.Common,
                         Data.Packed.Internal.Vector,
                         Data.Packed.Internal.Matrix,
-                        Numeric.GSL.Special.Internal
+                        Numeric.GSL.Special.Internal,
+                        Numeric.LinearAlgebra.Tests.Instances
+                        Numeric.LinearAlgebra.Tests.Properties
     C-sources:          lib/Data/Packed/Internal/auxi.c,
                         lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.c,
                         lib/Numeric/GSL/gsl-aux.c
