--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.2.0.0
+Version:            0.2.1.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -23,9 +23,9 @@ flag splitBase
 
 library
     if flag(splitBase)
-      build-depends:    base >= 3, array
+      build-depends:    base >= 3, array, QuickCheck, HUnit, storable-complex
     else
-      build-depends:    base < 3
+      build-depends:    base < 3, QuickCheck, HUnit, storable-complex
 
     ghc-options:        -O
 
